# emodpy-malaria

./: .bumpversion.cfg  .readthedocs.yml  CLAUDE.md  CODE_OF_CONDUCT.rst  CONTRIBUTING.rst  LICENSE  README.md  developer_installation.md  getting_started.md  mkdocs.yml  pyproject.toml  requirements.txt  setup.py  tutorial_interpret_results.md  tutorial_run_simple_example.md  tutorial_starting_codespaces.md
.devcontainer/: README.md  devcontainer.json  setup.sh
.github/workflows/: build_test.yaml  build_test_publish.yaml  bump_version.yml  emodpy-malaria-docs-rebuild.yml  lint.yml  mkdocs_build.yml  mkdocs_deploy.yml  publish_pypi.yml  test_and_bump_version.yml  tests_comps.yml  tests_unit_container.yml
docs/: bib.md  conf.py  faq.rst  glossary.md  glossary.rst  index.md  index.rst  installation-basic.rst  installation.md  installation.rst  overview.md  overview.rst  reference.md  reference.rst  variables.txt  virtual_environments.md  virtual_environments.rst
docs/csv/: 213-config-malaria.csv  ReportAntibodiesCapacity.csv  ReportAntibodiesConcentration.csv  ReportFpgNewInfections_Crossovers.csv  ReportInfectionDuration.csv  ReportInfectionStatsMalaria.csv  ReportMicrosporidia.csv  __summary.json  campaign-adherentdrug.csv  campaign-agediagnostic.csv  campaign-all-params.csv  campaign-animalfeedkill.csv  campaign-antimalarialdrug.csv  campaign-artificialdiet.csv  campaign-birthtriggerediv.csv  campaign-bitingrisk.csv  campaign-broadcastcoordinatorevent.csv  campaign-broadcastcoordinatoreventfromnode.csv  campaign-broadcastevent.csv  campaign-broadcasteventtoothernodes.csv  campaign-broadcastnodeevent.csv  campaign-calendareventcoordinator.csv  campaign-campaignevent.csv  campaign-campaigneventbyyear.csv  campaign-communityhealthworkereventcoordinator.csv  campaign-controlledvaccine.csv  campaign-coveragebynodeeventcoordinator.csv  campaign-delayedintervention.csv  campaign-delayeventcoordinator.csv  campaign-drugs.csv  campaign-femalecontraceptive.csv  campaign-firstnodewithnodepropertyeventcoordinator.csv  campaign-humanhostseekingtrap.csv  campaign-immunitybloodtest.csv  campaign-importpressure.csv  campaign-incidenceeventcoordinator.csv  campaign-individualimmunitychanger.csv  campaign-individualnondiseasedeathratemodifier.csv  campaign-indoorindividualemanator.csv  campaign-indoorspacespraying.csv  (+106 more)
docs/emod/: howto-migration-advanced.md  install-linux.rst  install-overview.rst  install-windows.rst  malaria-model-antimalarial-drugs.md  malaria-model-antimalarial-drugs.rst  malaria-model-fpg.md  malaria-model-fpg.rst  malaria-model-infection-immunity.md  malaria-model-infection-immunity.rst  malaria-model-overview.md  malaria-model-overview.rst  malaria-model-symptoms-diagnosis.md  malaria-model-symptoms-diagnosis.rst  malaria-overview.md  malaria-overview.rst  malaria-scenarios.rst  model-campaign.md  model-campaign.rst  model-care-cascade.md  model-care-cascade.rst  model-heterogeneity.md  model-heterogeneity.rst  model-migration.md  model-migration.rst  model-outbreak.md  model-outbreak.rst  model-overview.md  model-overview.rst  model-population-density.md  model-population-density.rst  model-properties.md  model-properties.rst  model-targeted-interventions.md  model-targeted-interventions.rst  model-vaccination.md  model-vaccination.rst  parameter-campaign-event-broadcastcoordinatorevent.md  parameter-campaign-event-calendareventcoordinator.md  parameter-campaign-event-campaignevent.md  (+290 more)
docs/json/: campaign-activediagnostic.json  campaign-adherentdrug-adherence-config.json  campaign-adherentdrug-cost-to-consumer.json  campaign-adherentdrug-dose-interval.json  campaign-adherentdrug-doses.json  campaign-adherentdrug-intervention-name.json  campaign-adherentdrug-max-dose-consideration-duration.json  campaign-adherentdrug-non-adherence-distribution.json  campaign-adherentdrug-non-adherence-options.json  campaign-adherentdrug-took-dose-event.json  campaign-agediagnostic-age-thresholds.json  campaign-agediagnostic-cost-to-consumer.json  campaign-agediagnostic-intervention-name.json  campaign-agediagnostic.json  campaign-animalfeedkill-intervention-name.json  campaign-animalfeedkill-killing-config.json  campaign-antimalarialdrug-cost-to-consumer.json  campaign-antimalarialdrug-drug-type.json  campaign-antimalarialdrug-intervention-name.json  campaign-artificialdiet-artificial-diet-target.json  campaign-artificialdiet-attraction-config.json  campaign-artificialdiet-cost-to-consumer.json  campaign-artificialdiet-dont-allow-duplicates.json  campaign-artificialdiet-intervention-name.json  campaign-birthtriggerediv-demographic-coverage.json  campaign-birthtriggerediv-duration.json  campaign-birthtriggerediv-intervention-name.json  campaign-birthtriggerediv-targeting-config.json  campaign-birthtriggerediv.json  campaign-bitingrisk-intervention-name.json  campaign-bitingrisk-risk-constant.json  campaign-bitingrisk-risk-distribution.json  campaign-bitingrisk-risk-exponential.json  campaign-bitingrisk-risk-gaussian-std-dev.json  campaign-bitingrisk-risk-log-normal-mu.json  campaign-bitingrisk-risk-max.json  campaign-bitingrisk-risk-mean-1.json  campaign-bitingrisk-risk-min.json  campaign-bitingrisk-risk-peak-2-value.json  campaign-bitingrisk-risk-poisson-mean.json  (+1200 more)
docs/md_tutorial/: tutorial_getting_started.md  tutorial_interpret_results.md  tutorial_run_simple_example.md  (+1 more)
docs/tutorials/: setup.md  (+11 more)
emodpy_malaria/: __init__.py  drug_config.py  malaria_config.py  malaria_drug_params.csv  malaria_vector_species_params.py  utils.py  vector_config.py
examples/: dtk_sif.id  snakefile
examples-container/: README.md  image_name  plot_inset_chart.py  snakefile
tests/: base_sim_test.py  helpers.py  manifest.py  pytest.ini
tutorials/: manifest.py  tutorial_1_intro.py  tutorial_2_reports.py  tutorial_3_interventions.py  tutorial_4_seasonality.py  tutorial_5_sweep.py  tutorial_6_calibration.py  tutorial_6_reference_pfpr.csv  tutorial_7_burnin.py  tutorial_7_pickup.py  tutorial_8_migration.py  tutorial_9_weather.py
(+248 files in other folders)
