[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "emodpy-malaria"
version = "5.0.2"
description = "IDM's malaria-specific EMOD-API binding code"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Sharon Chen", email = "sharon.chen@gatesfoundation.org"},
    {name = "Zhaowei Du", email = "zhaowei.du@gatesfoundation.org"},
    {name = "Clark Kirkman IV", email = "clark.kirkmand@gatesfoundation.org"},
    {name = "Daniel Bridenbecker", email = "daniel.bridenbecker@gatesfoundation.org"},
    {name = "Svetlana Titova", email = "svetlana.titova@gatesfoundation.org"},
    {name = "Ye Chen", email = "ye.chen@gatesfoundation.org"},
]
keywords = ["modeling", "IDM"]
dependencies = [
    "emodpy~=1.16",
    "chardet<6.0.0",
    "emod-malaria~=2.32.0",
]
license = "MIT" 
classifiers=[
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent"
]

[project.optional-dependencies]
docs = [
    "sphinxext.remoteliteralinclude~=0.4",
    "sphinx",
    "pydata-sphinx-theme",
    "plantweb~=1.2",
    "sphinxcontrib-programoutput~=0.17",
    "nbsphinx~=0.9",
    "jupyterlab~=4.0",
    "myst-parser~=2.0",
    "readthedocs-sphinx-search~=0.3",
    "sphinx-copybutton~=0.5",
    "pygithub~=1.57",
    "sphinxcontrib-jquery~=4.1",
]
lint = [
    "flake8",
]
test = [
    "pytest",
    "pytest-xdist",
    "pytest-runner",
    "pytest-timeout",
    "pytest-cache",
    "flake8",
    "coverage",
    "py-make",
    "snakemake~=8.30"
]

[project.urls]
Repository="https://github.com/EMOD-Hub/emodpy-malaria"
Issues="https://github.com/EMOD-Hub/issues-and-discussions/issues"

[tool.setuptools.packages]
find = {include = ["emodpy_malaria*"]}

[tool.setuptools.package-data]
emodpy_malaria = [
    "*.csv",
    "**/README.md",
]

[tool.bumpversion]
current_version = "5.0.2"
commit = true

[[tool.bumpversion.files]]
filename = "pyproject.toml"

[[tool.bumpversion.files]]
filename = "emodpy_malaria/__init__.py"
